update Vite, fix hero on small screen(size title, button position).

--- a/src/css/base/common.css
+++ b/src/css/base/common.css
@@ -1,5 +1,5 @@
 .container {
-  min-width: 320px;
+  min-width: 300px;
   max-width: 480px;
 
   padding: 0 16px;
